--- a/primeiro-projeto/src/app/app.component.html
+++ b/primeiro-projeto/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="contsiner-h1">
+
+  <div class="container-titulo">
     <h1> Lorem ipsum </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, non veniam dicta ab labore temporibus itaque
       impedit necessitatibus ut doloremque voluptates est
@@ -20,23 +21,10 @@
       odio recusandae deserunt, dicta laborum neque alias laboriosam iure rem reiciendis officiis officia.
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil officia, perferendis architecto id obcaecati
       eaque accusamus velit voluptatem repellat necessitatibus laudantium, modi cum ad ab culpa cumque voluptas non
-      dolorum?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates eligendi dicta commodi officiis.
-      Necessitatibus
-      esse sunt saepe eveniet laboriosam doloribus tempore corporis similique dolore, debitis quibusdam ullam? Quis,
-      eaque.
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero odit cum porro minima saepe! Et, labore possimus,
-      odio recusandae deserunt, dicta laborum neque alias laboriosam iure rem reiciendis officiis officia.
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil officia, perferendis architecto id obcaecati
-      eaque accusamus velit voluptatem repellat necessitatibus laudantium, modi cum ad ab culpa cumque voluptas non
-      dolorum?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates eligendi dicta commodi officiis.
-      Necessitatibus
-      esse sunt saepe eveniet laboriosam doloribus tempore corporis similique dolore, debitis quibusdam ullam? Quis,
-      eaque.</p>
+     .</p>
 
-  </div>
-  <div class="container-lorem2">
+ 
+
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero odit cum porro minima saepe! Et, labore possimus,
       odio recusandae deserunt, dicta laborum neque alias laboriosam iure rem reiciendis officiis officia.
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil officia, perferendis architecto id obcaecati
@@ -60,23 +48,10 @@
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil officia, perferendis architecto id obcaecati
       eaque accusamus velit voluptatem repellat necessitatibus laudantium, modi cum ad ab culpa cumque voluptas non
       dolorum?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates eligendi dicta commodi officiis.
-      Necessitatibus
-      esse sunt saepe eveniet laboriosam doloribus tempore corporis similique dolore, debitis quibusdam ullam? Quis,
-      eaque.
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero odit cum porro minima saepe! Et, labore possimus,
-      odio recusandae deserunt, dicta laborum neque alias laboriosam iure rem reiciendis officiis officia.
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil officia, perferendis architecto id obcaecati
-      eaque accusamus velit voluptatem repellat necessitatibus laudantium, modi cum ad ab culpa cumque voluptas non
-      dolorum?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates eligendi dicta commodi officiis.
-      Necessitatibus
-      esse sunt saepe eveniet laboriosam doloribus tempore corporis similique dolore, debitis quibusdam ullam? Quis,
-      eaque.</p>
+     </p>
 
 
   </div>
-
 
 
 </div>
