--- a/primeiro-projeto/src/styles.scss
+++ b/primeiro-projeto/src/styles.scss
@@ -1,5 +1,41 @@
-
+html{
+    background-color: #f8f8f8;
+}
 .container{
     display: flex;
+    flex-direction: column;
+    width: 60%;
+    height: 60%;
+    justify-content: space-between;
+    margin: auto;
+    margin-top: 5%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container-titulo {
+
+    h1 {
+        font-size: 50px;
+    }
+
+    p{
+        
+        font-size: 15px;
+    }
+}
+
+h1{
+
+}
+
+.container-lorem{
+    
+    display: flex;
     flex-direction: row;
+
+    p {
+        font-size: small;
+        padding-left: 20px;
+        text-align: justify;
+    }
 }
